[package]
name = "arey"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arey"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-openai = "0.28.3"
async-stream = "0.3"
async-trait = "0.1.77"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.11"
dirs = "5.0"
env_logger = "0.11"
futures = "0.3"
home = "0.5"
indicatif = "0.17"
lazy_static = "1.4.0"
notify = "8.0.0"
once_cell = "1.19.0"
path-absolutize = "3.1"
rand = "0.9.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
llama-cpp-2 = { version = "0.1.*", features = ["cuda"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies if needed

[dev-dependencies]
futures = { version = "0.3", features = ["async-await"] }
wiremock = "0.6.3"
