[package]
name = "arey"
version = "0.1.0"
edition = "2024"

[features]
cuda = ["llama-cpp-2/cuda"]

[[bin]]
name = "arey"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-openai = "0.28.3"
async-stream = "0.3"
async-trait = "0.1.77"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.11"
dirs = "5.0"
encoding_rs = "0.8.35"
env_logger = "0.11"
futures = "0.3"
home = "0.5"
indicatif = "0.17"
lazy_static = "1.4.0"
llama-cpp-2 = { version = "0.1.108" }
markdown = "1.0.0"
notify = "8.0.0"
once_cell = "1.19.0"
path-absolutize = "3.1"
rand = "0.9.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
futures = { version = "0.3", features = ["async-await"] }
tempfile = "3.8.0"
wiremock = "0.6.3"

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
