[workspace]
members = ["crates/core", "crates/arey", "crates/tools-search"]
resolver = "2"

[workspace.package]
version = "0.0.7"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "LLM tool"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-openai = { version = "0.30.1", features = ["byot"] }
async-stream = "0.3"
async-trait = "0.1.89"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0"
encoding_rs = "0.8.35"
env_logger = "0.11"
futures = "0.3"
home = "0.5"
lazy_static = "1.4.0"
markdown = "1.0.0"
notify = "8.2.0"
once_cell = "1.19.0"
path-absolutize = "3.1"
rand = "0.9.1"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.1"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tempfile = "3.24.0"
url = "2.5.7"
wiremock = "0.6.5"

# [workspace.dev-dependencies]
# futures = { version = "0.3", features = ["async-await"] }
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
