[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aye"
version = "0.0.1"
dependencies = [
    "click",
    "llama-cpp-python",
    "markdown",
    "python-frontmatter",
    "pyyaml",
    "rich",
    "watchfiles",
    "wurlitzer",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
test = ["pre-commit", "pytest", "pytest-mock", "pytest-cov", "ruff"]
samples = ["beautifulsoup4", "lxml"]

[project.scripts]
aye = "aye.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"aye" = ["**/*.yml", "**/*.md"]

[tool.setuptools.packages.find]
where = ["."]           # ["."] by default
include = ["aye*"]      # ["*"] by default
exclude = ["aye*tests"] # empty by default
namespaces = false      # true by default

[tool.coverage.run]
omit = []

[tool.coverage.report]
show_missing = "true"

[tool.pytest.ini_options]
addopts = "--cov=aye --cov-report=term-missing --quiet"

[tool.ruff]
exclude = [".venv", "venv"]
ignore = ["D203", "D212"]
line-length = 88
select = ["D", "E", "F", "W"]

[tool.ruff.per-file-ignores]
"aye/tests/**/*.py" = ["D101", "D102", "D103"]
"**/*.py" = ["F405", "D203", "D213"]
