[package]
name = "arey"
version = "0.0.7"
edition.workspace = true

[[bin]]
name = "arey"
path = "src/main.rs"

[dependencies]
arey-core = { path = "../core", version = "*" }
arey-tools-search = { path = "../tools-search" }
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
futures.workspace = true
indicatif.workspace = true
markdown.workspace = true
notify.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
rustyline = { version = "16.0.0", features = ["derive"] }
shlex = "1.3.0"
two-face = "0.4.3"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "registry", "env-filter"] }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
serde_json.workspace = true
wiremock.workspace = true

[features]
cuda = ["arey-core/cuda"]
