[package]
name = "arey"
version = "0.0.7"
edition.workspace = true

[[bin]]
name = "arey"
path = "src/main.rs"

[dependencies]
arey-core = { path = "../core", version = "*" }
arey-tools-search = { path = "../tools-search" }
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
clap.workspace = true
console = "0.16"
futures.workspace = true
indicatif = "0.18"
markdown.workspace = true
notify.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
rustyline = { version = "17.0.1", features = ["derive"] }
shlex = "1.3.0"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "registry",
    "env-filter",
] }
syntect = { version = "5.2.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "plist-load",
    "regex-onig",
] }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
serde_json.workspace = true
wiremock.workspace = true
once_cell.workspace = true

[features]
cuda = ["arey-core/cuda"]
