[package]
name = "arey"
version = "0.0.8"
edition.workspace = true

[[bin]]
name = "arey"
path = "src/main.rs"

[dependencies]
arey-core = { path = "../core", version = "*" }
arey-mcp = { path = "../mcp" }
arey-tools-search = { path = "../tools-search" }
arey-tools-fetch = { path = "../tools-fetch" }
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
clap.workspace = true
console = "0.16"
futures.workspace = true
indicatif = "0.18"
markdown.workspace = true
notify.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
rustyline = { version = "18.0.0", features = ["derive", "with-file-history"] }
shlex = "2.0.1"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "registry",
    "env-filter",
] }
syntect = { version = "5.3.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "plist-load",
    "regex-onig",
] }

[dev-dependencies]
arey-mcp = { path = "../mcp", features = ["test_utils"] }
async-trait.workspace = true
tempfile.workspace = true
serde_json.workspace = true
wiremock.workspace = true
once_cell.workspace = true
yare.workspace = true

[features]
cuda = ["arey-core/cuda"]
vulkan = ["arey-core/vulkan"]
