[package]
name = "arey-core"
version = "0.0.7"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
console.workspace = true
dirs.workspace = true
encoding_rs.workspace = true
env_logger.workspace = true
futures.workspace = true
home.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
llama-cpp-2.workspace = true
markdown.workspace = true
once_cell.workspace = true
path-absolutize.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
minijinja = "2.11.0"
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }

[dev-dependencies]
tempfile = { workspace = true, features = [
] } # Changed to inherit from workspace.dependencies
wiremock = { workspace = true, features = [
] } # Changed to inherit from workspace.dependencies
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[features]
cuda = ["llama-cpp-2/cuda"]
