[package]
name = "arey-core"
version = "0.0.7"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
encoding_rs.workspace = true
env_logger.workspace = true
futures.workspace = true
home.workspace = true
lazy_static.workspace = true
markdown.workspace = true
once_cell.workspace = true
path-absolutize.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
minijinja = { version = "2.12.0", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.12.0", features = ["pycompat"] }
llama-cpp-2 = "=0.1.124"

[dev-dependencies]
tempfile = { workspace = true, features = [] }
wiremock = { workspace = true, features = [] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = ["json"] }


[features]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
